--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,7 @@
 *::before,
 *::after {
   box-sizing: border-box;
+  /* cursor: none; */
 }
 
 @font-face {
@@ -49,4 +50,17 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+.animate-spine {
+  animation: spin 5s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
